added some comments on the code

--- a/form.html
+++ b/form.html
@@ -6,6 +6,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<!--form start here-->
+<form action ="main.php" method= "post">
+    <fieldset >
+        <!-- User Input -->
+        Username: <input type = text name = "user"  id = "user" placeholder="Enter Name " required autofocus autocomplete=off><br>
+        <!--Password Input -->
+        Password :  <input type = text name = "pass"  id = "pass" placeholder="Enter Password " required autocomplete=off><br>
+
+        <input type=submit ><br>
+    </fieldset>
+</form>
+<!--form end here-->
+<!--registration user start here-->
 <form action ="main.php" method= "post">
     <fieldset >
         <!-- User Input -->
@@ -17,4 +30,5 @@
     </fieldset>
 </form>
 
+<!--usr registration end-->
 </html>
