registration function added to the code

--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="style.css">
 </head>
-
+<br>User Login<br>
 <!--form start here-->
 <form action ="main.php" method= "post">
     <fieldset >
@@ -19,12 +19,13 @@
 </form>
 <!--form end here-->
 <!--registration user start here-->
-<form action ="main.php" method= "post">
+<br><br>User Registration Here
+<form action ="registration.php" method= "post">
     <fieldset >
         <!-- User Input -->
-        Username: <input type = text name = "user"  id = "user" placeholder="Enter Name " required autofocus autocomplete=off><br>
+        Username: <input type = text name = "username"  id = "username" placeholder="Enter Name " required autofocus autocomplete=off><br>
         <!--Password Input -->
-        Password :  <input type = text name = "pass"  id = "pass" placeholder="Enter Password " required autocomplete=off><br>
+        Password :  <input type = text name = "password"  id = "password" placeholder="Enter Password " required autocomplete=off><br>
 
         <input type=submit ><br>
     </fieldset>
