--- a/form.html
+++ b/form.html
@@ -23,6 +23,11 @@
 <form action ="registration.php" method= "post">
     <fieldset >
         <!-- User Input -->
+        First Name: <input type = text name = "fname"  id = "fname" placeholder="Enter First Name "  autofocus autocomplete=off><br>
+        <!--Password Input -->
+        Last Name :  <input type = text name = "lname"  id = "lname" placeholder="Enter last Name "  autocomplete=off><br>
+
+        <!-- User Input -->
         Username: <input type = text name = "username"  id = "username" placeholder="Enter Name " required autofocus autocomplete=off><br>
         <!--Password Input -->
         Password :  <input type = text name = "password"  id = "password" placeholder="Enter Password " required autocomplete=off><br>
@@ -30,6 +35,7 @@
         <input type=submit ><br>
     </fieldset>
 </form>
+
 
 <!--usr registration end-->
 </html>
